syntax = "proto3";

package transaction;

import "models/transaction/transaction.proto";
import "requests/transaction/query_transaction_request.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "QueryTransactionResponseProtos";

message QueryTransactionResponseProto {
  string object_class = 1;
  string version = 2;

  transaction.QueryTransactionRequestProto create_transaction_request = 20;

  repeated transaction.TransactionProto transaction_response = 30;
}


